--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "dotenv": "^8.2.0",
+    "request": "^2.88.2"
   }
 }
