--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -5,18 +5,31 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js",
+    "test": "jest --watchAll" 
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.10",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
+    "sendgrid": "^5.2.3",
+    "sharp": "^0.27.0",
+    "supertest": "^6.1.1",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "jest": "^26.6.3"
   }
 }
